test/corpus/cross_boundary.txt
==================
lexical and expression recovery preserve every enclosing boundary
==================
BEGIN {
  print /(abc
  print "text
  value +
  retained
}
END {}
---

(program
  (item_list
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (newline_opt
          (newline))
        (terminated_statement_list
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (print_statement
                  (simple_print_statement
                    (print_keyword)
                    (print_expr_list
                      (print_expr
                        (non_unary_print_expr
                          (ere
                            (extended_reg_exp
                              (ere_branch
                                (ere_expression
                                  (extended_reg_exp
                                    (ere_branch
                                      (ere_branch
                                        (ere_branch
                                          (ere_expression
                                            (one_char_or_coll_elem_ere
                                              (ordinary_character))))
                                        (ere_expression
                                          (one_char_or_coll_elem_ere
                                            (ordinary_character))))
                                      (ere_expression
                                        (one_char_or_coll_elem_ere
                                          (ordinary_character)))))
                                  (ere_inner_recovery))))
                            (ere_end_recovery)))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (print_statement
                  (simple_print_statement
                    (print_keyword)
                    (print_expr_list
                      (print_expr
                        (non_unary_print_expr
                          (string
                            (string_content)
                            (string_end_recovery)))))))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (non_unary_expr
                      (lvalue
                        (name)))
                    (expression_recovery)))))
            (newline))
          (terminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (lvalue
                      (name))))))
            (newline)))))
    (terminator
      (newline)))
  (item
    (pattern
      (special_pattern
        (end_keyword)))
    (action)))

==================
missing control bodies preserve reserved following items
==================
BEGIN { if (condition)
END { print end_target }
BEGIN { if (condition) consequence; else
END { print alternative_target }
BEGIN { if (outer) while (inner) \
BEGIN { print begin_target }
BEGIN { for (;;)
function classic_follow() { print classic_target }
BEGIN { for (name in values)
function in_follow() { print in_target }
---

(program
  (item_list
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (unterminated_statement_list
          (unterminated_statement
            (if_keyword)
            (expr
              (non_unary_expr
                (lvalue
                  (name))))
            (newline_opt
              (newline))
            (statement_recovery)))
        (action_item_boundary_recovery)))
    (terminator_recovery)
    (item
      (pattern
        (special_pattern
          (end_keyword)))
      (action
        (unterminated_statement_list
          (unterminated_statement
            (terminatable_statement
              (simple_statement
                (print_statement
                  (simple_print_statement
                    (print_keyword)
                    (print_expr_list
                      (print_expr
                        (non_unary_print_expr
                          (lvalue
                            (name)))))))))))))
    (terminator
      (newline))
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (unterminated_statement_list
          (unterminated_statement
            (if_keyword)
            (expr
              (non_unary_expr
                (lvalue
                  (name))))
            (terminated_statement
              (terminatable_statement
                (simple_statement
                  (expr
                    (non_unary_expr
                      (lvalue
                        (name)))))))
            (else_keyword)
            (newline_opt
              (newline))
            (statement_recovery)))
        (action_item_boundary_recovery)))
    (terminator_recovery)
    (item
      (pattern
        (special_pattern
          (end_keyword)))
      (action
        (unterminated_statement_list
          (unterminated_statement
            (terminatable_statement
              (simple_statement
                (print_statement
                  (simple_print_statement
                    (print_keyword)
                    (print_expr_list
                      (print_expr
                        (non_unary_print_expr
                          (lvalue
                            (name)))))))))))))
    (terminator
      (newline))
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (unterminated_statement_list
          (unterminated_statement
            (if_keyword)
            (expr
              (non_unary_expr
                (lvalue
                  (name))))
            (unterminated_statement
              (while_keyword)
              (expr
                (non_unary_expr
                  (lvalue
                    (name))))
              (line_continuation)
              (statement_recovery))))
        (action_item_boundary_recovery)))
    (terminator_recovery)
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (unterminated_statement_list
          (unterminated_statement
            (terminatable_statement
              (simple_statement
                (print_statement
                  (simple_print_statement
                    (print_keyword)
                    (print_expr_list
                      (print_expr
                        (non_unary_print_expr
                          (lvalue
                            (name)))))))))))))
    (terminator
      (newline))
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (unterminated_statement_list
          (unterminated_statement
            (for_keyword)
            (newline_opt
              (newline))
            (statement_recovery)))
        (action_item_boundary_recovery)))
    (terminator_recovery)
    (item
      (function_keyword)
      (func_name)
      (action
        (unterminated_statement_list
          (unterminated_statement
            (terminatable_statement
              (simple_statement
                (print_statement
                  (simple_print_statement
                    (print_keyword)
                    (print_expr_list
                      (print_expr
                        (non_unary_print_expr
                          (lvalue
                            (name)))))))))))))
    (terminator
      (newline))
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (unterminated_statement_list
          (unterminated_statement
            (for_keyword)
            (name)
            (in_keyword)
            (name)
            (newline_opt
              (newline))
            (statement_recovery)))
        (action_item_boundary_recovery)))
    (terminator_recovery))
  (item
    (function_keyword)
    (func_name)
    (action
      (unterminated_statement_list
        (unterminated_statement
          (terminatable_statement
            (simple_statement
              (print_statement
                (simple_print_statement
                  (print_keyword)
                  (print_expr_list
                    (print_expr
                      (non_unary_print_expr
                        (lvalue
                          (name))))))))))))))

==================
missing do body and tail preserve the following item
==================
BEGIN { do
END { print end_target }
BEGIN { do print body; \
function follow() { print function_target }
---

(program
  (item_list
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (unterminated_statement_list
          (unterminated_statement
            (terminatable_statement
              (do_keyword)
              (newline_opt
                (newline))
              (statement_recovery)
              (do_tail_recovery))))
        (action_item_boundary_recovery)))
    (terminator_recovery)
    (item
      (pattern
        (special_pattern
          (end_keyword)))
      (action
        (unterminated_statement_list
          (unterminated_statement
            (terminatable_statement
              (simple_statement
                (print_statement
                  (simple_print_statement
                    (print_keyword)
                    (print_expr_list
                      (print_expr
                        (non_unary_print_expr
                          (lvalue
                            (name)))))))))))))
    (terminator
      (newline))
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (unterminated_statement_list
          (unterminated_statement
            (terminatable_statement
              (do_keyword)
              (terminated_statement
                (terminatable_statement
                  (simple_statement
                    (print_statement
                      (simple_print_statement
                        (print_keyword)
                        (print_expr_list
                          (print_expr
                            (non_unary_print_expr
                              (lvalue
                                (name))))))))))
              (line_continuation)
              (do_tail_recovery))))
        (action_item_boundary_recovery)))
    (terminator_recovery))
  (item
    (function_keyword)
    (func_name)
    (action
      (unterminated_statement_list
        (unterminated_statement
          (terminatable_statement
            (simple_statement
              (print_statement
                (simple_print_statement
                  (print_keyword)
                  (print_expr_list
                    (print_expr
                      (non_unary_print_expr
                        (lvalue
                          (name))))))))))))))

==================
a mixed subscript closer composes with a direct item boundary
==================
BEGIN { f(array[offset) END {}
---

(program
  (item_list
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (unterminated_statement_list
          (unterminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (func_name)
                    (expr_list
                      (expr
                        (non_unary_expr
                          (lvalue
                            (name)
                            (expr_list
                              (expr
                                (non_unary_expr
                                  (lvalue
                                    (name)))))
                            (closer_recovery)))))))))))
        (action_item_boundary_recovery)))
    (terminator_recovery))
  (item
    (pattern
      (special_pattern
        (end_keyword)))
    (action)))

==================
a mixed group closer composes with real-newline and EOF action boundaries
==================
BEGIN { array[(head]
END {}
BEGIN { array[(tail]
---

(program
  (item_list
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (unterminated_statement_list
          (unterminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (lvalue
                      (name)
                      (expr_list
                        (expr
                          (non_unary_expr
                            (expr
                              (non_unary_expr
                                (lvalue
                                  (name))))
                            (closer_recovery)))))))))))
        (closer_recovery)))
    (terminator
      (newline))
    (item
      (pattern
        (special_pattern
          (end_keyword)))
      (action))
    (terminator
      (newline)))
  (item
    (pattern
      (special_pattern
        (begin_keyword)))
    (action
      (unterminated_statement_list
        (unterminated_statement
          (terminatable_statement
            (simple_statement
              (expr
                (non_unary_expr
                  (lvalue
                    (name)
                    (expr_list
                      (expr
                        (non_unary_expr
                          (expr
                            (non_unary_expr
                              (lvalue
                                (name))))
                          (closer_recovery)))))))))))
      (closer_recovery))))

==================
comma and colon never synchronize pending closers across following items
==================
BEGIN {
  f((left\
, right) }
BEGIN { result = condition ? (yes\
: no }
END {}
---

(program
  (item_list
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (newline_opt
          (newline))
        (ERROR
          (func_name)
          (multiple_expr_list
            (expr
              (non_unary_expr
                (lvalue
                  (name))))
            (line_continuation)
            (expr
              (non_unary_expr
                (lvalue
                  (name))))))))
    (terminator
      (newline))
    (item
      (pattern
        (special_pattern
          (begin_keyword)))
      (action
        (unterminated_statement_list
          (unterminated_statement
            (terminatable_statement
              (simple_statement
                (expr
                  (non_unary_expr
                    (lvalue
                      (name))
                    (expr
                      (non_unary_expr
                        (lvalue
                          (name))))))))))
        (ERROR
          (name)
          (line_continuation)
          (UNEXPECTED 'n'))))
    (terminator
      (newline)))
  (item
    (pattern
      (special_pattern
        (end_keyword)))
    (action)))
